Added delete function and success view

--- a/mr_app/templates/form.html
+++ b/mr_app/templates/form.html
@@ -15,9 +15,8 @@
   <!--
   <h1>Mars Rover Inputs</h1>
     <p>Please enter the following data to move the rover:</p>
-        <form method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
+        <form action="#" method="get">
+        <input type="submit" class="btn" value="Click" name="mybtn">
             <button type="submit">Submit</button>
         </form>
         -->
