--- a/mr_app/templates/del_view.html
+++ b/mr_app/templates/del_view.html
@@ -9,12 +9,9 @@
   </head>
   <body style="padding: 20px;">
     <h1>Welcome to The Mars Rover Tech Challenge</h1>
-    <h3>Please click Next to Continue</h3>
+    <h3>Please click Delete to delete previous data</h3>
       <form action="#" method="get">
-        <input type="submit" class="btn btn-success" value="Next" name="next-btn">
-          <br>
-      <h4>If you wish to delete previous data please click Delete:</h4>
-        <input type="submit" class="btn btn-success" value="Next" name="delete-btn">
+        <input type="submit" class="btn btn-success" value="Delete" name="sure-delete">
       </form>
   </body>
 </html>
