Added view/template for objects in model from form

--- a/mr_app/templates/success.html
+++ b/mr_app/templates/success.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Delete Previous Data</title>
+    <title>Success</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body style="padding: 20px;">
     <h1>Welcome to The Mars Rover Tech Challenge</h1>
-    <h3>Please click Delete to delete previous data</h3>
+    <h3>The following data has been collected:</h3>
+
+    {% for user_inputs in user_inputs %}
+        <h3>{{ user_inputs.user_inputs }}</h3>
+    {% endfor %}
+
+    <h3>placeholder</h3>
+    <br>
+    <h3>Please click Next to Calculate the positions of the Mars Rovers:</h3>
+    <br>
       <form action="#" method="get">
-        <input type="submit" class="btn btn-success" value="Delete" name="sure-delete">
+        <input type="submit" class="btn btn-success" value="Next" name="next-calc-btn">
       </form>
   </body>
 </html>
