Adding worker for calc, added final result mehod. No view yet

--- a/mr_app/templates/index.html
+++ b/mr_app/templates/index.html
@@ -14,7 +14,7 @@
         <input type="submit" class="btn btn-success" value="Next" name="next-btn">
           <br>
       <h4>If you wish to delete previous data please click Delete:</h4>
-        <input type="submit" class="btn btn-success" value="Next" name="delete-btn">
+        <input type="submit" class="btn btn-success" value="Delete" name="delete-btn">
       </form>
   </body>
 </html>
